{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 319,
  "lineage": "b334d8b0-a9f1-7653-5fba-b560a5df1e73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-ci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0afad43e7d620260c",
            "arn": "arn:aws:ec2:eu-north-1:147482197243:instance/i-0fd36389775c45cba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd36389775c45cba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00399fc392c12fbd6",
            "private_dns": "ip-172-31-47-45.eu-north-1.compute.internal",
            "private_ip": "172.31.47.45",
            "public_dns": "ec2-13-48-194-82.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.194.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e475a81d768ffab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-egress-tls-example",
              "default-ping-example",
              "default-ssh-example",
              "default-web-example",
              "default-web_server-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-18aa0263",
            "tags": {
              "Name": "jenkins-ci-1"
            },
            "tags_all": {
              "Name": "jenkins-ci-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06f12e9e6dea21ac6",
              "sg-0a55ffdf04190693d",
              "sg-0c1b79d745a079bdb",
              "sg-0d163306711004fc1",
              "sg-0f1564fd60d50821e"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.egress-tls",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web",
            "aws_security_group.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0afad43e7d620260c",
            "arn": "arn:aws:ec2:eu-north-1:147482197243:instance/i-023fee8f2f345903a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023fee8f2f345903a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004760ec29e1cdf4d",
            "private_dns": "ip-172-31-45-17.eu-north-1.compute.internal",
            "private_ip": "172.31.45.17",
            "public_dns": "ec2-13-48-248-149.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.248.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d79387209677284",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-db_server-example",
              "default-egress-tls-example",
              "default-ping-example",
              "default-ssh-example",
              "default-web-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-18aa0263",
            "tags": {
              "Name": "mysql-1"
            },
            "tags_all": {
              "Name": "mysql-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-035372e6381d93d6a",
              "sg-06f12e9e6dea21ac6",
              "sg-0a55ffdf04190693d",
              "sg-0c1b79d745a079bdb",
              "sg-0d163306711004fc1"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.db_server",
            "aws_security_group.egress-tls",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0afad43e7d620260c",
            "arn": "arn:aws:ec2:eu-north-1:147482197243:instance/i-0e79c75a265aef070",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e79c75a265aef070",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01245984d5b9bfb53",
            "private_dns": "ip-172-31-44-205.eu-north-1.compute.internal",
            "private_ip": "172.31.44.205",
            "public_dns": "ec2-13-48-27-28.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.27.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ee578c327a2c466",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default-egress-tls-example",
              "default-ping-example",
              "default-ssh-example",
              "default-web-example",
              "default-web_server-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-18aa0263",
            "tags": {
              "Name": "tomcat-1"
            },
            "tags_all": {
              "Name": "tomcat-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06f12e9e6dea21ac6",
              "sg-0a55ffdf04190693d",
              "sg-0c1b79d745a079bdb",
              "sg-0d163306711004fc1",
              "sg-0f1564fd60d50821e"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server",
            "aws_key_pair.demo_key",
            "aws_security_group.egress-tls",
            "aws_security_group.ping-ICMP",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147482197243:security-group/sg-035372e6381d93d6a",
            "description": "Default security group that allows to use port 5432",
            "egress": [],
            "id": "sg-035372e6381d93d6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "default-db_server-example",
            "name_prefix": "",
            "owner_id": "147482197243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_server-default"
            },
            "tags_all": {
              "Name": "db_server-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-585fd731"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress-tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147482197243:security-group/sg-0d163306711004fc1",
            "description": "Default security group that allows inbound and outbound traffic from all instances in the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d163306711004fc1",
            "ingress": [],
            "name": "default-egress-tls-example",
            "name_prefix": "",
            "owner_id": "147482197243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "egress-tls-default"
            },
            "tags_all": {
              "Name": "egress-tls-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-585fd731"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-ICMP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147482197243:security-group/sg-0c1b79d745a079bdb",
            "description": "Default security group that allows to ping the instance",
            "egress": [],
            "id": "sg-0c1b79d745a079bdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "default-ping-example",
            "name_prefix": "",
            "owner_id": "147482197243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ping-ICMP-default"
            },
            "tags_all": {
              "Name": "ping-ICMP-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-585fd731"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147482197243:security-group/sg-0a55ffdf04190693d",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [],
            "id": "sg-0a55ffdf04190693d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default-ssh-example",
            "name_prefix": "",
            "owner_id": "147482197243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-default"
            },
            "tags_all": {
              "Name": "ssh-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-585fd731"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147482197243:security-group/sg-06f12e9e6dea21ac6",
            "description": "Security group for web that allows web traffic from internet",
            "egress": [],
            "id": "sg-06f12e9e6dea21ac6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-web-example",
            "name_prefix": "",
            "owner_id": "147482197243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-default"
            },
            "tags_all": {
              "Name": "web-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-585fd731"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147482197243:security-group/sg-0f1564fd60d50821e",
            "description": "Default security group that allows to use port 8080",
            "egress": [],
            "id": "sg-0f1564fd60d50821e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2224,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2224
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8929,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8929
              }
            ],
            "name": "default-web_server-example",
            "name_prefix": "",
            "owner_id": "147482197243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server-default"
            },
            "tags_all": {
              "Name": "web_server-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-585fd731"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}